syntax = "proto3";

package validatorstate;
option go_package = "github.com/luxfi/consensus/proto/pb/validatorstate";

import "google/protobuf/empty.proto";

service ValidatorState {
  rpc GetMinimumHeight(GetMinimumHeightRequest) returns (GetMinimumHeightResponse);
  rpc GetCurrentHeight(GetCurrentHeightRequest) returns (GetCurrentHeightResponse);
  rpc GetSubnetID(GetSubnetIDRequest) returns (GetSubnetIDResponse);
  rpc GetValidatorSet(GetValidatorSetRequest) returns (GetValidatorSetResponse);
  rpc GetCurrentValidatorSet(GetCurrentValidatorSetRequest) returns (GetCurrentValidatorSetResponse);
}

message GetMinimumHeightRequest {}

message GetMinimumHeightResponse {
  uint64 height = 1;
}

message GetCurrentHeightRequest {}

message GetCurrentHeightResponse {
  uint64 height = 1;
}

message GetSubnetIDRequest {
  bytes chain_id = 1;
}

message GetSubnetIDResponse {
  bytes subnet_id = 1;
}

message GetValidatorSetRequest {
  uint64 height = 1;
  bytes subnet_id = 2;
}

message GetValidatorSetResponse {
  repeated Validator validators = 1;
}

message GetCurrentValidatorSetRequest {
  bytes subnet_id = 1;
}

message GetCurrentValidatorSetResponse {
  repeated Validator validators = 1;
  uint64 current_height = 2;
}

message Validator {
  bytes node_id = 1;
  bytes public_key = 2;
  uint64 weight = 3;
  uint64 start_time = 4;
  bool is_active = 5;
  bytes validation_id = 6;
  uint64 min_nonce = 7;
  bool is_l1_validator = 8;
}